[package]
name = "eth-crypto"
version = "0.1.0"
authors = ["Forrest Marshall <forrest@mimirblockchain.solutions>"]
license = "CC0-1.0"
readme = "README.md"

[dependencies]
serde-hex = { git = "https://github.com/forrest-marshall/serde-hex.git" }
lazy_static = "0.2.9"
tiny-keccak = "1.3.1"
secp256k1 = "0.7.1"
rand = "0.3.17"

